--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
+    <script src="/TodoTask.jsx" type="text/babel"></script>
     <script src="/app.jsx" type="text/babel"></script>
 </body>
 
