--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
     <script src="/TodoTask.jsx" type="text/babel"></script>
+    <script src="/DoingTask.jsx" type="text/babel"></script>
     <script src="/app.jsx" type="text/babel"></script>
 </body>
 
