Implement moving to finished column

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <script src="/TodoTask.jsx" type="text/babel"></script>
     <script src="/DoingTask.jsx" type="text/babel"></script>
+    <script src="/FinishedTask.jsx" type="text/babel"></script>
     <script src="/app.jsx" type="text/babel"></script>
 </body>
 
