Move compoments to a compoments folder

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
-    <script src="/TodoTask.jsx" type="text/babel"></script>
-    <script src="/DoingTask.jsx" type="text/babel"></script>
-    <script src="/FinishedTask.jsx" type="text/babel"></script>
+    <script src="/components/TodoTask.jsx" type="text/babel"></script>
+    <script src="/components/DoingTask.jsx" type="text/babel"></script>
+    <script src="/components/FinishedTask.jsx" type="text/babel"></script>
     <script src="/app.jsx" type="text/babel"></script>
 </body>
 
